# PyVirtualSerialPorts

./: .gitignore  LICENSE  README.md  example.py  multi-version-test.sh  setup.cfg  test_virtualserialports.py  virtualserialports.py
.github/workflows/: python-publish.yml  python-test.yml
tests/: test_unit.py
