[metadata]
name = PyVirtualSerialPorts
version = 2.0.0
author = Ezra Morris
description = Python library and script to create temporary virtual serial ports
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ezramorris/PyVirtualSerialPorts
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Intended Audience :: Developers

[options]
py_modules = virtualserialports
python_requires = >= 3.5

[options.entry_points]
console_scripts =
    virtualserialports = virtualserialports:main
